--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "eslint-config-rallycoding": "^3.2.0",
     "expo": "^27.0.1",
+    "firebase": "^5.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-navigation": "^2.0.0-rc.9",
