--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-modal": "^6.0.0",
+    "react-native-slider": "^0.11.0",
     "react-navigation": "^2.0.0-rc.9",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
