--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "datejs": "^1.0.0-rc3",
     "eslint-config-rallycoding": "^3.2.0",
     "expo": "^27.0.1",
     "firebase": "^5.0.1",
