--- a/app.json
+++ b/app.json
@@ -3,12 +3,16 @@
     "name": "taste-of-wime",
     "description": "Time spent in meetings tracker.",
     "slug": "taste-of-wime",
-    "privacy": "public",
+    "privacy": "unlisted",
     "sdkVersion": "27.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon1024.png",
+    "loading": {
+        "icon": "./assets/icon1024.png",
+        "hideExponentText": false
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
