--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "privacy": "unlisted",
     "sdkVersion": "27.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon1024.png",
     "loading": {
@@ -14,7 +14,7 @@
         "hideExponentText": false
     },
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon1024.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
